Auto IRC Bot 3.0: Change Log
------------------------------------------------------------------

3.0 Indev
==================================================================
    * Renamed src/ to lib/.
    * Switched from Auto-Flatfile to SQLite for database backend.
    * Added a Badwords module.
    * Added kick() to API::IRC.
    * Added DBI and DBD::SQLite to core dependencies.
    * Added on_connect hook, triggered after we receive 001.
    * Updated hooks to use hashrefs.
    * Moved CTCP VERSION reply to Core::IRC.
    * Renamed Core::IRC to Core::Cmd.
    * Parse MODE.
    * Added CertFP support.
    * Rewrote socket read/write methods.
    * Added SSL support.
    * Added act() to API::IRC.
    * Added IPv6 support.

3.0 Alpha 2
==================================================================
    * Added update check for non-indev releases.
    * Added Git revision to version string for dev releases.
    * Added an FML module for retrieving random FML quotes.
    * Privilege to use a command is now handled by the priv arg of
      cmd_add.
    * HELP now only displays help if the user has the appropriate
      privileges.
    * Updated Core::IRC and all modules to obey the updated API.
    * Deleted shelp from cmd_add, replaced with privilege. Renamed
      fhelp to help.
    * If fantasy HELP is used, only display fantasy commands, if
      private HELP is used, only display private commands.
    * Fixed cmd_add syntax. Correct format: name, level, short help,
      full help, callback.
    * Added core command HELP.
    * Added core command RESTART.
    * Added config option server:autorejoin for rejoining on kick.
    * Added event on_kick.
    * Parse KICK.
    * Added event on_quit.
    * Parse QUIT.
    * Added event on_part.
    * Parse PART.
    * Update chanusers on JOIN.
    * Properly parse NICK and update chanusers.
    * Added --enable-ssl to ./install for the future SSL support.
    * Added chanstatus-based permissions. This works via