@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ==================================================================
+    * Moved signal handlers to Lib::Auto.
     * Renamed src/ to lib/.
     * Switched from Auto-Flatfile to SQLite for database backend.
     * Added a Badwords module.
